Fix multiple symbol subscriptions on same exchange
This fixes #1. Thank you @lfern!

--- a/samples/settings_ws.json
+++ b/samples/settings_ws.json
@@ -6,7 +6,8 @@
       "ETH/USDT"
     ],
     "binance": [
-      "BNB/BTC"
+      "BNB/BTC",
+      "NANO/BTC"
     ],
     "bitstamp": [
       "BTC/EUR",
